--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Single-Page HTML CV Project</title>
         <link rel="stylesheet" href="styles.css">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <div>
